# fast-api-sample

./: .pre-commit-config.yaml  api_main.py  app.py  main.py  pyproject.toml  sql_app.db  streamlit_main.py  test_api.py
sql_app/: crud.py  database.py  models.py  schemas.py
