[tool.poetry]
name = "fast-api-sample"
version = "0.1.0"
description = ""
authors = ["nakatake <tonarinototorototoro8972@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
