[tool.poetry]
name = "fast-api-sample"
version = "0.1.0"
description = ""
authors = ["nakatake <tonarinototorototoro8972@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
streamlit = "^1.34.0"
sqlalchemy = "^2.0.30"
types-requests = "^2.31.0.20240406"
pandas = "^2.2.2"
pandas-stubs = "^2.2.1.240316"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
